# todo_fs_rust

./: Cargo.toml  Dioxus.toml  README.md  db.sqlite
assets/: main.css
src/: main.rs
src/backend/: db.rs  mod.rs  model.rs  server_functions.rs
src/components/: add.rs  home.rs  list.rs  mod.rs  nav.rs  remove.rs  todo.rs  toggle.rs
